qname enumeration fix to allow different prefix in schema and instance (XERCESC-1441)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/branches/xerces-2@577310 13f79535-47bb-0310-9956-ffa450edef68