src/xercesc/internal/ValidationContextImpl.cpp
@@ -28,6 +28,7 @@
 #include <xercesc/validators/DTD/DTDEntityDecl.hpp>
 #include <xercesc/validators/datatype/InvalidDatatypeValueException.hpp>
 #include <xercesc/internal/ElemStack.hpp>
+#include <xercesc/internal/XMLScanner.hpp>
 
 XERCES_CPP_NAMESPACE_BEGIN
 
@@ -48,6 +49,7 @@ ValidationContextImpl::ValidationContextImpl(MemoryManager* const manager)
 ,fToCheckIdRefList(true)
 ,fValidatingMemberType(0)
 ,fElemStack(0)
+,fScanner(0)
 {
     fIdRefList = new (fMemoryManager) RefHashTableOf<XMLRefInfo>(109, fMemoryManager);
 }
@@ -189,6 +191,16 @@ bool ValidationContextImpl::isPrefixUnknown(XMLCh* prefix) {
         fElemStack->mapPrefixToURI(prefix, (ElemStack::MapModes) ElemStack::Mode_Element, unknown);                
     }                
     return unknown;
+}
+
+const XMLCh* ValidationContextImpl::getURIForPrefix(XMLCh* prefix) { 
+    bool unknown = false;
+    unsigned int uriId = fElemStack->mapPrefixToURI(prefix, (ElemStack::MapModes) ElemStack::Mode_Element, unknown);
+    if (!unknown) {
+        return fScanner->getURIText(uriId);
+    }
+    
+    return XMLUni::fgZeroLenString; 
 }
 
 XERCES_CPP_NAMESPACE_END
