src/xercesc/validators/datatype/QNameDatatypeValidator.cpp
@@ -72,6 +72,7 @@ void QNameDatatypeValidator::checkValueSpace(const XMLCh* const content
     //
     // check 3.2.18.c0 must: QName
     //
+
     if ( !XMLChar1_0::isValidQName(content, XMLString::stringLen(content)) )
     {
         ThrowXMLwithMemMgr1(InvalidDatatypeValueException
@@ -115,14 +116,18 @@ void QNameDatatypeValidator::checkContent( const XMLCh*             const conten
 
     checkValueSpace(content, manager);
 
+    int colonPos;
+    XMLCh* prefix = 0;    
+    ArrayJanitor<XMLCh>  jan(prefix, manager);
+
     if (context) {
-        int colonPos = XMLString::indexOf(content, chColon);
-        if (colonPos > 0) {
-            XMLCh* prefix = XMLString::replicate(content, manager);
-            ArrayJanitor<XMLCh>  jan(prefix, manager);
-            normalizeContent(prefix, manager);
-            prefix[colonPos] = chNull;
-                     
+        prefix = XMLString::replicate(content, manager);
+        jan.reset(prefix, manager);
+        normalizeContent(prefix, manager);
+
+        colonPos = XMLString::indexOf(content, chColon);
+        if (colonPos > 0) {                        
+            prefix[colonPos] = chNull;                     
             if (context->isPrefixUnknown(prefix)) {
                 ThrowXMLwithMemMgr1(InvalidDatatypeValueException
                     , XMLExcepts::VALUE_QName_Invalid2
@@ -132,6 +137,7 @@ void QNameDatatypeValidator::checkContent( const XMLCh*             const conten
         }
     }
 
+#if 0
     if ((thisFacetsDefined & DatatypeValidator::FACET_ENUMERATION) != 0 &&
         (getEnumeration() != 0))
     {
@@ -151,8 +157,102 @@ void QNameDatatypeValidator::checkContent( const XMLCh*             const conten
             ThrowXMLwithMemMgr1(InvalidDatatypeValueException, XMLExcepts::VALUE_NotIn_Enumeration, content, manager);
     }
 
+
+#else
+    if ((thisFacetsDefined & DatatypeValidator::FACET_ENUMERATION) != 0 &&
+        (getEnumeration() != 0) && context)
+    {
+        XMLCh* localName;
+        if (colonPos > 0) {
+            localName = prefix + colonPos + 1;
+        }
+        else {
+            localName = prefix;
+        }
+
+        XMLCh* enumPrefix;
+        XMLCh* enumLocalName;
+        int i=0;
+        int enumLength = getEnumeration()->size();
+        bool foundURIId = false;
+        const XMLCh* normURI;
+		// The +=2 is because the enumeration has prefix:localname as one entry followed
+		// by the URI string for the prefix as the next entry.
+        for ( ; i < enumLength; i+=2)
+        {            
+            enumPrefix = XMLString::replicate(getEnumeration()->elementAt(i), manager);
+            ArrayJanitor<XMLCh>  janEnum(enumPrefix, manager);
+            colonPos = XMLString::indexOf(enumPrefix, chColon, 0, manager);
+            
+            if (colonPos != -1) {
+                enumLocalName = enumPrefix + colonPos + 1;
+                enumPrefix[colonPos] = chNull;
+            }
+            else {
+                enumLocalName = enumPrefix;
+            }
+            
+            if (XMLString::equals(localName, enumLocalName)) {               
+				if (colonPos < 0)
+					break;
+
+                // now need to see if the prefix URI's are the same                
+                if (!foundURIId) {                    
+                    normURI = context->getURIForPrefix(prefix);                                       
+                    foundURIId = true;
+                }
+				if (XMLString::equals(normURI, getEnumeration()->elementAt(i+1)))
+					break;
+            }        
+        }
+
+        if (i == enumLength)
+            ThrowXMLwithMemMgr1(InvalidDatatypeValueException, XMLExcepts::VALUE_NotIn_Enumeration, content, manager);
+    }
+#endif
+
     checkAdditionalFacet(content, manager);
 }
+
+//
+//  Check vs base
+//         check common facets
+//         check enumeration
+//         check Additional Facet Constraint
+//
+void QNameDatatypeValidator::inspectFacetBase(MemoryManager* const manager)
+{
+
+    QNameDatatypeValidator *pBaseValidator = (QNameDatatypeValidator*) getBaseValidator();
+    int thisFacetsDefined = getFacetsDefined();
+
+    if ( (!thisFacetsDefined && !getEnumeration()) ||
+         (!pBaseValidator)                      )
+        return;
+
+    // check 4.3.5.c0 must: enumeration values from the value space of base
+    if ( ((thisFacetsDefined & DatatypeValidator::FACET_ENUMERATION) != 0) &&
+        (getEnumeration() !=0))
+    {
+        int i = 0;
+        int enumLength = getEnumeration()->size();
+		// The +=2 is because the enumeration has prefix:localname as one entry followed
+		// by the URI string for the prefix as the next entry.
+        for ( ; i < enumLength; i+=2)
+        {
+            // ask parent do a complete check
+            pBaseValidator->checkContent(getEnumeration()->elementAt(i), (ValidationContext*)0, false, manager);
+#if 0
+// spec says that only base has to checkContent          
+            // enum shall pass this->checkContent() as well.
+            checkContent(getEnumeration()->elementAt(i), (ValidationContext*)0, false, manager);
+#endif
+        }
+    }
+
+    checkAdditionalFacetConstraints(manager);
+
+} //end of inspectFacetBase
 
 /***
  * Support for Serialization/De-serialization
